--- a/literatura.bib
+++ b/literatura.bib
@@ -151,6 +151,14 @@ title = {Let’s Get the Best Papers to the Finish Line: Ontological and Pictori
     note = "online, accessed 02-November-2020",
     url = "https://towardsdatascience.com/your-guide-to-natural-language-processing-nlp-48ea2511f6e1"
     }
+    
+@Misc{ nltk_docs,
+    title = "nltk.corpus.reader package",
+    author = {NLTK Project},
+    year = "2020",
+    note = "online, accessed 09-November-2020",
+    url = "http://www.nltk.org/api/nltk.corpus.reader.html?highlight=wordnet#nltk.corpus.reader.wordnet.Lemma.synset"
+    }
 @book{nltk_ps,
 author = {Bird, Steven and Klein, Ewan and Loper, Edward},
 title = {Natural Language Processing with Python},
@@ -310,9 +318,105 @@ issn = {0891-2017},
 journal = {Comput. Linguist.},
 month = jun,
 }
+       @Misc{eswc,
+    title = "Mission",
+    publisher= {Semantic Technology Institute International},
+    note = "online, accessed 03-November-2020",
+    url = "https://www.eswc-conferences.org/"
+    }
+@book{eswc_topics,
+series = {Information Systems and Applications, incl. Internet/Web, and HCI ; 7295},
+abstract = {This book constitutes the refereed proceedings of the 9th Extended Semantic Web Conference, ESWC 2012, held in Heraklion, Crete, Greece, in May 2012. The 53 revised full papers presented were carefully reviewed and selected from 212 submissions. They are organized in tracks on linked open data, machine learning, natural language processing and information retrieval, ontologies, reasoning, semantic data management, services, processes, and cloud computing, social Web and Web science, in-use and industrial, digital libraries and cultural heritage, and e-government. The book also includes 13 PhD papers presented at the PhD Symposium.},
+isbn = {3-642-30284-X},
+year = {2012},
+title = {The Semantic Web: Research and Applications 9th Extended Semantic Web Conference, ESWC 2012, Heraklion, Crete, Greece, May 27-31, 2012, Proceedings},
+edition = {1st ed. 2012.},
+language = {eng},
+keywords = {Information systems; Artificial intelligence; Computer Communication Networks; Database management; Computer science; Information Systems and Communication Service; Artificial Intelligence; Information Systems Applications (incl. Internet); Computer Communication Networks; Database Management; User Interfaces and Human Computer Interaction},
+organization = {Extended Semantic Web Conference (9th : 2012 : Ērakleion, Greece)},
+}
+
+       @Misc{ekaw,
+    title = "About",
+    publisher= {Knowledge Media Institute},
+    note = "online, accessed 04-November-2020",
+    url = "http://ekaw.org/"
+    }
+    
+     @Misc{ekaw_2020,
+    title = "22nd International Conference on Knowledge Engineering and Knowledge Management",
+    publisher= {EKAW 2020},
+    note = "online, accessed 04-November-2020",
+    url = "https://ekaw2020.inf.unibz.it/"
+    }
+    @Misc{iswc,
+    title = "International Semantic Web Conference (ISWC)",
+    publisher= {SWSA (Semantic Web Science Association)},
+    note = "online, accessed 04-November-2020",
+    url = "http://swsa.semanticweb.org/content/international-semantic-web-conference-iswc"
+    }
+    
+    @misc{nano_peer,
+      title={Peer Reviewing Revisited: Assessing Research with Interlinked Semantic Comments}, 
+      author={Cristina-Iulia Bucur and Tobias Kuhn and Davide Ceolin},
+      year={2019},
+      eprint={1910.03218},
+      archivePrefix={arXiv},
+      primaryClass={cs.DL}
+}
+@misc{wordnet_howto,
+      title={WordNet Interface
+}, 
+	    note = "online, accessed 09-November-2020",
+      url= "https://www.nltk.org/howto/wordnet.html"
+}
+    @misc{nanopublications,
+      title={A Unified Nanopublication Model for Effective and User-Friendly Access to the Elements of Scientific Publishing}, 
+      author={Cristina-Iulia Bucur and Tobias Kuhn and Davide Ceolin},
+      year={2020},
+      eprint={2006.06348},
+      archivePrefix={arXiv},
+      primaryClass={cs.DL}
+}
+
+@article{socal,
+author = {Taboada, Maite and Brooke, Julian and Tofiloski, Milan and Voll, Kimberly and Stede, Manfred},
+title = {Lexicon-Based Methods for Sentiment Analysis},
+journal = {Computational Linguistics},
+volume = {37},
+number = {2},
+pages = {267-307},
+year = {2011},
+doi = {10.1162/COLI\_a\_00049},
+
+URL = { 
+        https://doi.org/10.1162/COLI_a_00049
+    
+},
+eprint = { 
+        https://doi.org/10.1162/COLI_a_00049
+    
+}
+}
+
+@Misc{wordnet_counts,
+    title = "WordNet with NLTK: Finding Synonyms for words in Python",
+    publisher= {Guru99},
+    note = "online, accessed 09-November-2020",
+    url = "https://www.guru99.com/wordnet-nltk.html"
+    }
+    
+  @Misc{spacy,
+    title = "Natural Language Processing: NLTK Vs SpaCy",
+    publisher= {ActiveState},
+    note = "online, accessed 09-November-2020",
+    author= {Kakarla, Swaathi},
+    year = "2019",
+    url = "https://www.activestate.com/blog/natural-language-processing-nltk-vs-spacy/"
+    }
 @BOOK{Pecakova2018,
   title = {Extracting the noun phrases using nltk},
-  publisher = {Professional Publishing},
+  publisher = {Knowledge Media Institute},
   year = {2018},
   author = {Pecáková, Iva},
   address = {Praha},
