--- a/prace.tex
+++ b/prace.tex
@@ -75,6 +75,7 @@ Abstract.
 \include{introduction}
 \include{sentiment_analysis}
 \include{natural_language_processing}
+\include{domain}
 \include{data}
 \include{implementation_ae}
 \include{implementation_sl}
@@ -87,7 +88,7 @@ Abstract.
 
 %%% Přílohy k bakalářské práci, existují-li. Každá příloha musí být alespoň jednou
 %%% odkazována z vlastního textu práce. Přílohy se číslují.
-\part*{Přílohy}
+\part*{Attachements}
 \appendix
 \include{app01}
 \include{app02}
