--- a/implementation_sa.tex
+++ b/implementation_sa.tex
@@ -1,6 +1,285 @@
 \chapter{Implementation of aspect-based sentiment analysis for conference paper reviews}
-
-\section{Description of the algorithm}
-
 \section{Design of classes}
 
+ \subsection{Review}
+ \begin{figure}[H]
+\centering
+\begin{tikzpicture}
+  \begin{class}[text width=8cm]{Review}{0,0}
+    \attribute{file\_name : string}
+	\attribute{sentences : list}
+	\attribute{criteria : dictionary}
+    \operation{get\_scores() : dictionary}
+    \operation{add\_score(criterion : string, value: int)}
+    \operation{print\_results()}
+  \end{class}
+ 
+\end{tikzpicture}
+
+\caption{Review class diagram}
+\label{img:review}
+\end{figure}
+
+Each review is represented by the \texttt{Review} class. When the class is initiated with its constructor the attribute \texttt{file\_name} is initialized with the file\_name of the review (for the purpose of printing the results). The review text is the tokenized into sentence using NLTK's \texttt{sent\_tokenize} function. To keep track of the numerical scores of the review, which are assigned through the process of sentiment analysis, there is a dictionary \texttt{criteria}, in which the keys of the dictionary are the set of generic criteria as chosen in section INSERT. The values are represented by the \texttt{CriterionScore} class described in section INSERT.
+
+The class has also three methods. The \texttt{add\_score} method accepts the name of a criterion and a sentiment value (-1 or +1) that should be added to the criterion and updates the \texttt{criteria} dictionary accordingly. The \texttt{get\_scores} function returns the final scores for a review in the form of a dictionary where the different criteria are the keys and the values are the numerical scores normalized between 1 and 5. Finally the \texttt{print\_results} function outputs the scores of the review onto the command line in a format shown on figure \ref{img:r_results}.
+\begin{figure}[!htb]
+\centering
+\begin{tabular}{c}
+\begin{lstlisting}
+row233.txt
+	relevance                       3
+	novelty                         5
+	technical quality               1
+	state of the art                5
+	evaluation                      2
+	presentation                    1
+\end{lstlisting}
+\end{tabular}
+\caption{Example output of the \texttt{print\_results} method of the \texttt{Review} class}
+\label{img:r_results}
+\end{figure}
+
+\subsection{Sentence}
+\begin{figure}[H]
+\centering
+\begin{tikzpicture}
+\begin{class}[text width=8cm]{Sentence}{0,0}
+    \attribute{tokens : list}
+    \attribute{sentence : string}
+    \attribute{sentence\_original : string}
+    \attribute{aspects : list}
+    \attribute{opinion\_words : list}
+    \attribute{criterion\_orientation : dictionary }
+	\attribute{unoriented\_aspects : list }
+
+    \operation{print\_results()}
+  \end{class}
+\end{tikzpicture}
+\caption{Sentence class diagram}
+\label{img:sentence}
+\end{figure}
+
+The \texttt{Sentence} class represents one sentence from a review. When initialized the original sentence is kept in the \texttt{sentence\_original} attribute for printing purposes, however for the needs of the sentiment analysis the sentence is also tokenized and lemmatized. I have used the \texttt{MWEtokenizer} here as well as NLTK's \texttt{word\_tokenize} function. The \texttt{MWEtokenizer} takes a string in the form of a list of tokens and
+retokenizes it, ``merging multi-word expressions into single tokens, using a lexicon of MWEs'' INSERT. The reason is that because some aspect expression are multi-words expressions, such as ``state of the art'' I need to keep them as single tokens, in order for them to be recognized when matching the sentence against the aspect taxonomy. Therefore each aspect in the taxonomy is added as a multi-word expression to the \texttt{MWEtokenizer} lexicon. 
+
+The tokens are also lemmatized, with the exception of adjective to keep words such as ``better'' to be lemmatized to ``good'' (the reasoning behind that was explained in section INSERT).
+The tokenized and lemmatized sentence is then kept in the \texttt{tokens} attribute of the class and the lemmatized tokens are stringed back together in the \texttt{sentence} attribute. 
+
+For the sentiment analysis algorithm it is also key to know which aspect expressions and which sentiment words the sentence contains. To get a list of aspect expressions I call the \texttt{Taxonomy}'s class method \texttt{get\_aspects}, which compares the tokens it gets as an argument with the taxonomy of aspects and returns the matches as a list of the \texttt{Aspect} class objects. The list of aspect expression is kept in the \texttt{aspects} attribute of the class.
+
+To get a list of sentiment words the \texttt{find\_opinion\_words\_sentiment} function is called, which belongs to the sentimentr module. This function gets a list of tokens as an argument and then for each token that is found in the sentiment lexicon it calculates the polarity value using the sentimentr method (described in section INSERT). It returns a list of (sentiment word, polarity) tuples, which are then used to initialize the \texttt{OpinionWord} class. However if there is an overlap between a sentiment word and an aspect expression, the word is at this point discarded (it may be used in the future, if the orientation of an aspect expression is not found any other way as explained in more detail in section INSERT). The list of sentiment expression is kept in the \texttt{opinion\_words} attribute.
+
+If the main part of the sentiment analysis algorithm fails for an aspect expression (it evaluates the polarity at zero) there is a set of rules which try to determine the sentiment in some other ways. The list of aspect expressions which need the further evaluation is kept in the \texttt{unoriented\_aspects} attribute to which these aspects are continuously added as the review is analyzed.
+
+To keep a track of which criteria a sentence is focused on as well as the polarity of the opinion that is expressed, there is the \texttt{criterion\_orientation} attribute, which is a dictionary where the keys are the criteria and the values are numerical scores.
+
+The \texttt{Sentence} class contains a single method, \texttt{print\_results}, which allows the user to see the results of the analysis on a more fine-grained level than the \texttt{print\_results} method of the \texttt{Review} class. It prints the original sentence and for each criterion in the sentence shows if the polarity of the opinion on the criterion is positive, negative or neutral.
+
+
+\subsection{OpinionWord}
+\begin{figure}[H]
+\centering
+\begin{tikzpicture}
+\begin{class}[text width=8cm]{OpinionWord}{0,0}
+    \attribute{name : string}
+    \attribute{sentiment\_score : float}
+  \end{class}
+\end{tikzpicture}
+\caption{OpinionWord class diagram}
+\label{img:opinionword}
+\end{figure}
+
+The \texttt{OpinionWord} class represent an opinion/sentiment word with the name of the word in the \texttt{name} string attribute and the sentiment polarity determined by the sentimentr algorithm kept in the \texttt{sentiment\_score} attribute as a decimal value.
+
+\subsection{CriterionScore}
+\begin{figure}[H]
+\centering
+\begin{tikzpicture}
+\begin{class}[text width=8cm]{CriterionScore}{0,0}
+    \attribute{criterion : string}
+    \attribute{score : int}
+    \attribute{count : int}
+  \end{class}
+\end{tikzpicture}
+\caption{CriterionScore class diagram}
+\label{img:criterionscore}
+\end{figure}
+
+The \texttt{CriterionScore} class is to keep track of the six main criteria which the reviews are evaluated by. The \texttt{criterion} string attribute is assigned the name of the criterion, the \texttt{score} attribute keeps track of the numerical score of the criterion and the \texttt{count} attribute counts the number of times new value is added to the \texttt{score}. Any time an aspect expression belonging to the criterion is discovered in a sentence and its orientation is evaluated by the sentiment analysis algorithm it is added to the \texttt{score} attribute so the \texttt{count} attribute allows as to count the average value so all scores are normalized.
+
+\subsection{Taxonomy}
+\begin{figure}[H]
+\centering
+\begin{tikzpicture}
+\begin{class}[text width=8cm]{Taxonomy}{0,0}
+    \attribute{aspects : dictionary}
+    \attribute{aspect\_names : list}
+    \attribute{criteria : list}
+    
+    \operation{get\_aspects(tokens : list) : list}
+    \operation{aspect\_words\_overlap(word : string) : bool}
+    
+  \end{class}
+\end{tikzpicture}
+\caption{Taxonomy class diagram}
+\label{img:taxonomyclass}
+\end{figure}
+
+The \texttt{Taxonomy} class represents the taxonomy created in INSERT. The class is initiated only once, when the taxonomy is loaded from the JSON file in which it was saved during the taxonomy generation phase. The \texttt{aspects} attribute is a python dictionary which follows the same structure as the JSON (see figure INSERT).  For simplicity of other operation the \texttt{criteria} attributes keeps a list of all the main criteria/metrics, while the \texttt{aspect\_names} attribute keeps track of all aspect expressions in the taxonomy.
+
+There are two method in the class, the method \texttt{get\_aspects} accepts a list of tokens in a sentence, finds if any of the tokens are aspect expressions and if so, returns a list of the \texttt{Aspect} class objects that correspond to them. The second method \texttt{aspect\_words\_overlap} accepts a string as an argument and returns \textit{True} if the string overlaps with a string of an aspect expression and \textit{False} otherwise.
+
+
+\subsection{Aspect}
+\begin{figure}[H]
+\centering
+\begin{tikzpicture}
+\begin{class}[text width=8cm]{Taxonomy}{0,0}
+    \attribute{criterion : string}
+    \attribute{name : string}
+    \attribute{adjective : bool}
+  \end{class}
+\end{tikzpicture}
+\caption{Aspect class diagram}
+\label{img:aspectclass}
+\end{figure}
+
+The \texttt{Aspect} class simply represents an aspect expression, the name of which is saved in the \texttt{name} attribute. It also keeps the name of the criterion/metric under which the aspect expression belongs in the \texttt{criterion} attribute, in the form of a string. 
+
+If the aspect is an adjective the \texttt{adjective} attribute is set to \textit{True} to enable some special handling of these expressions. The value of \texttt{adjective} is determined by finding the wordnet synsets of the expression and if the POS tag of any of the synsets is that of an adjective (in NLTK's wordnet implementation that means the tag is either \textit{a} for an adjective or \textit{s} for satellite adjectives).
+
+\section{Description of the algorithm}
+\begin{figure}[htbp!]
+\begin{algorithm}[H]
+% Set Function Names
+  \SetKwFunction{FMain}{opinion\_orientation}
+
+
+
+  \SetKwProg{Fn}{Function}{:}{\KwRet}
+  \Fn{\FMain}{
+       \For{each sentence $s_{i}$ that contains a set of aspect expressions}    
+        { 
+        	\If{the number of aspect expressions in $s_{i}$ > 5}
+    			{
+      				continue\;
+    			}
+    		\For{each aspect $a_{j}$ in $s_{i}$}
+    		{
+    			$orienation$ = 0\;
+    			\For{each opinion word $ow_{k}$ in $s_{i}$}
+    			{
+    				$distance$ = \textbf{distance\_betweeen\_words}($ow_{k}$, $a_{j}$, $s_{i}$)\;
+    				$orientation$ += $\frac{ow_{k}.sentiment\_score}{distance}$\;
+    				
+    			}
+    			
+    			\eIf{$orientation$ > 0}
+    		{ 
+    			$orientation$ = 1\;
+    		}
+    		{
+    		\eIf{$orientation$ < 0}
+    		{
+    		$orientation$ = -1\;
+    		}
+    		{
+    		$orientation$ = 0\;
+    		}
+    		}
+    			\eIf{$orientation$ = 0 and $a_{j}$ is an adjective}
+    		{
+				$orientation$ = 1\;   
+    		}
+    		
+    		{
+    			add $a_{j}$ to $s_{i}$'s unoriented\_aspects\;
+    		}
+    			$a_{j}$'s criterion orientation in $s_{i}$ += $orientation$\;
+    			\textbf{review.add\_score}($a_{j}$'s criterion, orientation)
+    		}
+    		\For{aspect $a_{l}$ in $s_{i}$'s unoriented aspects}
+    		{
+    		$orientation$ = \textbf{apply\_intra\_sentence\_rules}($s_{i}$, $a_{l}$)\;
+    		\If{$orientation$ = 0}
+    		{
+    			$sentiment$ = \textbf{find\_opinion\_words\_sentiment}($a_{l}$)\;
+    		}
+    		
+    		
+    		\eIf{$orientation$ > 0}
+    		{ 
+    			$orientation$ = 1\;
+    		}
+    		{
+    		\eIf{$orientation$ < 0}
+    		{
+    		$orientation$ = -1\;
+    		}
+    		{
+    		$orientation$ = 0\;
+    		}
+    		}
+    		$a_{l}$'s criterion orientation in $s_{i}$ += $orientation$\;
+    		\textbf{review.add\_score}($a_{l}$'s criterion, orientation)
+    		}
+    		}
+  }
+\end{algorithm}
+\caption{opinion\_orientation algorithm}
+\label{img:opinion_orientation}
+\end{figure}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\begin{figure}[h]
+\begin{algorithm}[H]
+% Set Function Names
+  \SetKwFunction{ISR}{apply\_intra\_sentence\_rules}
+
+
+
+  \SetKwProg{Fn}{Function}{:}{\KwRet}
+  \Fn{\ISR}{
+	\For{each opinion word $ow_{i}$ in the sentence}
+	{
+		$words\_between$ = words between $aspect$ and $ow_{i}$\;
+		\If{adversative in $words\_between$}
+		{
+			\Return{$-1\times ow_{i}.sentiment\_score$}
+		}
+	}
+}
+\end{algorithm}
+\caption{apply\_intra\_sentence\_rules algorithm}
+\label{img:intra_sentence}
+\end{figure}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+
+The aspect-based sentiment algorithm that I have created for the task of extracting criteria orientations from a text is loosely based on the algorithm mentioned in section INSERT, but I have made some changes. The main part of the algorithm is shown on figure \ref{img:opinion_orientation}. 
+
+\subsection{Determining opinion orientation using aspect expressions and sentiment words in a sentence}
+
+For each review we iterate through its sentences (which are here objects of class \texttt{Sentence}). If the number of aspect expressions in the sentence is more than 5 the sentence is not evaluated. That is because if the number of aspects is that high in a single sentence it would be hard to evaluate which opinion words belong to which aspect. It is especially an issue with the numerical evaluations at the beginning of reviews, which are sometimes not structured by newlines or any other separator.
+
+Given a sentence $s_{i}$ that contains a set of aspect expression we compute a sentiment polarity score for the expression. Given a set of sentiment words in the sentence, we calculate their influence based on the sentiment score given by the sentimentr algorithm which is divided by the distance of the sentiment word from the aspect expression. These scores are then aggregated by a sum function for each aspect expression.
+
+An expression is assigned the sentiment polarity of +1 if it is positive and -1 if it is negative, 0 if the polarity was not determined. If the polarity is 0, it is added to the list of unoriented aspects of a sentence for further processing, but if we succeeded in determining the polarity, the score for an criterion under which the aspect expression belongs in the taxonomy is adjusted in the review as well as the sentence.
+\subsection{Adjectives as aspect expressions}
+When for some aspect expressions the orientation is unknown after aggregating polarities of nearby opinion words they are added to $s_{i}$'s list of unoriented aspects. These aspect expressions are then first evaluated using the adjective rule, where if the aspect expression is an adjective, it may be used as an opinion word itself. That is the case in sentences such as ``This paper is highly relevant to the conference'', where the adjective \textit{relevant} points to the relevance criterion, but also expresses a positive polarity on said criterion. 
+
+In cases when the aspect expression is an adjective, its polarity is determined using the sentimentr algorithm as if it was an opinion word, to cover cases such as negation.
+
+\subsection{Intra sentence rules}
+If the aspect expression orientation is still unknown after the use of the adjective rule it is evaluated using the intra sentence rules, which rely on the fact that a sentence only expresses one polarity unless it includes an adversative conjunction.
+
+For each so far unoriented aspect expression we find the closest opinion word and all the words between the aspect and the opinion word. If there is a adversative conjunction in between the opinion word and the aspect expression, that likely means the sentiment polarity was inverted by the conjunction and therefore the aspect expression should be given the opposite polarity of the opinion word. This should help in sentences such as ``The evaluation shows great results but the dataset was small.'' in which \textit{dataset} might be an aspect expression pointing to the evaluation criterion but \textit{small} might not be in the sentiment lexicon (for a human, it is easy to point to small as a negative word here based on the context, but that is not always the case, like in a phrase \textit{small error} it would be positive). The closest identified opinion word in this sentence would be \textit{great}, with a positive polarity, but given the fact that there is \textit{but} in between \textit{great} and \textit{dataset}, the polarity assigned would be negated.
+
+If no adversative conjunction is found, the aspect expression is given the polarity of the closest opinion word without any changes, following the \textit{one sentence -- one polarity} idea. 
+
+\subsection{Sentences with neutral sentiment}
+If the orientation of an aspect expression is still 0 after the application of all rules, it is finally evaluated as neutral. Sometimes, this might mean that the sentiment was present but expressed in a way that the algorithm did not recognize. It might also mean a false positive for an aspect identified within a sentence. That is because there might be an overlap between aspect expressions and expression that are often used within the field for describing an idea presented in a paper . Take the sentence ``In this paper authors investigate how state-of-the-art language technologies can be ported to the historical ecology domain.'' in which the algorithm would think that the \textit{state-of-the-art} expression points to the state of the art criterion but here it is simply a statement about the objective of the paper. 
+
+These aspect expression do not influence the numerical scores of a review, the aspects with neutral orientation are however still shown in the algorithm's output at a sentence level.
